--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/serve-static": "^5.0.3",
+    "@types/react-slick": "^0.23.13",
+    "axios": "^1.8.3",
+    "dotenv": "^16.4.7",
+    "react-slick": "^0.30.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
