--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,11 @@
     "target": "ES2023",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": "./src",
+    "paths": {
+      "user/*": ["user/*"],
+      "contact/*": ["contact/*"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
