--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
+    "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.1",
@@ -28,7 +29,10 @@
     "@nestjs/serve-static": "^5.0.3",
     "@types/react-slick": "^0.23.13",
     "axios": "^1.8.3",
+    "cache-manager": "^6.4.1",
     "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "react-slick": "^0.30.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
