--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/serve-static": "^5.0.3",
+    "@supabase/supabase-js": "^2.49.1",
     "@types/react-slick": "^0.23.13",
     "axios": "^1.8.3",
     "cache-manager": "^6.4.1",
