--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/serve-static": "^5.0.3",
     "@supabase/supabase-js": "^2.49.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-slick": "^0.23.13",
     "axios": "^1.8.3",
     "cache-manager": "^6.4.1",
     "dotenv": "^16.4.7",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "react-slick": "^0.30.3",
