feat: added profile view

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -13,6 +13,7 @@
     "paths": {
       "@store/*": ["store/*"],
       "@pages/*": ["pages/*"],
+      "@components/*": ["components/*"],
       "@types/*": ["types/*"],
       "@/*": ["*"]
     },
