fix: final details

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.13",
+    "@types/multer": "^1.4.12",
+    "@types/papaparse": "^5.3.15",
     "@types/react-slick": "^0.23.13",
     "jsonwebtoken": "^9.0.2",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
-    "react-slick": "^0.30.3"
+    "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
