--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/serve-static": "^5.0.3",
     "@supabase/supabase-js": "^2.49.1",
     "@types/js-cookie": "^3.0.6",
+    "@types/multer": "^1.4.12",
+    "@types/papaparse": "^5.3.15",
     "@types/react-slick": "^0.23.13",
     "axios": "^1.8.3",
     "cache-manager": "^6.4.1",
@@ -36,9 +38,11 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
+    "papaparse": "^5.5.2",
     "react-slick": "^0.30.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
